Fix: style del button z-index

--- a/blocks/element/__trash/element__trash.css
+++ b/blocks/element/__trash/element__trash.css
@@ -6,7 +6,7 @@
   position: absolute;
   top: 18px;
   right: 15px;
-  z-index: 1;
+  z-index: 0;
   border: none;
   transition: opacity 0.2s linear;
 }
